// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`build: bundle 1`] = `
"/******/ (function(modules) { // webpackBootstrap
/******/ 	// The module cache
/******/ 	var installedModules = {};
/******/
/******/ 	// The require function
/******/ 	function __webpack_require__(moduleId) {
/******/
/******/ 		// Check if module is in cache
/******/ 		if(installedModules[moduleId]) {
/******/ 			return installedModules[moduleId].exports;
/******/ 		}
/******/ 		// Create a new module (and put it into the cache)
/******/ 		var module = installedModules[moduleId] = {
/******/ 			i: moduleId,
/******/ 			l: false,
/******/ 			exports: {}
/******/ 		};
/******/
/******/ 		// Execute the module function
/******/ 		modules[moduleId].call(module.exports, module, module.exports, __webpack_require__);
/******/
/******/ 		// Flag the module as loaded
/******/ 		module.l = true;
/******/
/******/ 		// Return the exports of the module
/******/ 		return module.exports;
/******/ 	}
/******/
/******/
/******/ 	// expose the modules object (__webpack_modules__)
/******/ 	__webpack_require__.m = modules;
/******/
/******/ 	// expose the module cache
/******/ 	__webpack_require__.c = installedModules;
/******/
/******/ 	// define getter function for harmony exports
/******/ 	__webpack_require__.d = function(exports, name, getter) {
/******/ 		if(!__webpack_require__.o(exports, name)) {
/******/ 			Object.defineProperty(exports, name, { enumerable: true, get: getter });
/******/ 		}
/******/ 	};
/******/
/******/ 	// define __esModule on exports
/******/ 	__webpack_require__.r = function(exports) {
/******/ 		if(typeof Symbol !== 'undefined' && Symbol.toStringTag) {
/******/ 			Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });
/******/ 		}
/******/ 		Object.defineProperty(exports, '__esModule', { value: true });
/******/ 	};
/******/
/******/ 	// create a fake namespace object
/******/ 	// mode & 1: value is a module id, require it
/******/ 	// mode & 2: merge all properties of value into the ns
/******/ 	// mode & 4: return value when already ns object
/******/ 	// mode & 8|1: behave like require
/******/ 	__webpack_require__.t = function(value, mode) {
/******/ 		if(mode & 1) value = __webpack_require__(value);
/******/ 		if(mode & 8) return value;
/******/ 		if((mode & 4) && typeof value === 'object' && value && value.__esModule) return value;
/******/ 		var ns = Object.create(null);
/******/ 		__webpack_require__.r(ns);
/******/ 		Object.defineProperty(ns, 'default', { enumerable: true, value: value });
/******/ 		if(mode & 2 && typeof value != 'string') for(var key in value) __webpack_require__.d(ns, key, function(key) { return value[key]; }.bind(null, key));
/******/ 		return ns;
/******/ 	};
/******/
/******/ 	// getDefaultExport function for compatibility with non-harmony modules
/******/ 	__webpack_require__.n = function(module) {
/******/ 		var getter = module && module.__esModule ?
/******/ 			function getDefault() { return module['default']; } :
/******/ 			function getModuleExports() { return module; };
/******/ 		__webpack_require__.d(getter, 'a', getter);
/******/ 		return getter;
/******/ 	};
/******/
/******/ 	// Object.prototype.hasOwnProperty.call
/******/ 	__webpack_require__.o = function(object, property) { return Object.prototype.hasOwnProperty.call(object, property); };
/******/
/******/ 	// __webpack_public_path__
/******/ 	__webpack_require__.p = \\"\\";
/******/
/******/
/******/ 	// Load entry module and return exports
/******/ 	return __webpack_require__(__webpack_require__.s = \\"./test/comparison-tests/nodeModulesMeaningfulErrorWhenImportingTs/app.ts\\");
/******/ })
/************************************************************************/
/******/ ({

/***/ \\"./test/comparison-tests/nodeModulesMeaningfulErrorWhenImportingTs/app.ts\\":
/*!********************************************************************************!*\\\\
  !*** ./test/comparison-tests/nodeModulesMeaningfulErrorWhenImportingTs/app.ts ***!
  \\\\********************************************************************************/
/*! no static exports found */
/***/ (function(module, exports, __webpack_require__) {

\\"use strict\\";
eval(\\"\\\\nexports.__esModule = true;\\\\nvar a = __webpack_require__(/*! a */ \\\\\\"./test/comparison-tests/nodeModulesMeaningfulErrorWhenImportingTs/node_modules/a/index.ts\\\\\\");\\\\nconsole.log(a);\\\\n\\\\n\\\\n//# sourceURL=webpack:///./test/comparison-tests/nodeModulesMeaningfulErrorWhenImportingTs/app.ts?\\");

/***/ }),

/***/ \\"./test/comparison-tests/nodeModulesMeaningfulErrorWhenImportingTs/node_modules/a/index.ts\\":
/*!*************************************************************************************************!*\\\\
  !*** ./test/comparison-tests/nodeModulesMeaningfulErrorWhenImportingTs/node_modules/a/index.ts ***!
  \\\\*************************************************************************************************/
/*! no static exports found */
/***/ (function(module, exports) {

eval(\\"throw new Error(\\\\\\"Module build failed (from ./dist/index.js):\\\\\\\\nError: TypeScript emitted no output for ./test/comparison-tests/nodeModulesMeaningfulErrorWhenImportingTs/node_modules/a/index.ts. By default, ts-loader will not compile .ts files in node_modules.\\\\\\\\nYou should not need to recompile .ts files there, but if you really want to, use the allowTsInNodeModules option.\\\\\\\\nSee: https://github.com/Microsoft/TypeScript/issues/12358\\\\\\\\n    at makeSourceMapAndFinish (ts-loader)\\\\\\\\n    at successLoader (ts-loader)\\\\\\\\n    at Object.loader (ts-loader)\\\\\\");\\\\n\\\\n//# sourceURL=webpack:///./test/comparison-tests/nodeModulesMeaningfulErrorWhenImportingTs/node_modules/a/index.ts?\\");

/***/ })

/******/ });"
`;

exports[`build: stats 1`] = `
"    Asset   Size  Chunks             Chunk Names
bundle.js <size>    main  [emitted]  main
Entrypoint main = bundle.js
[./test/comparison-tests/nodeModulesMeaningfulErrorWhenImportingTs/app.ts] <size> {main} [built]
[./test/comparison-tests/nodeModulesMeaningfulErrorWhenImportingTs/node_modules/a/index.ts] <size> {main} [built] [failed] [1 error]

ERROR in ./test/comparison-tests/nodeModulesMeaningfulErrorWhenImportingTs/node_modules/a/index.ts
Module build failed (from ./dist/index.js):
Error: TypeScript emitted no output for ./test/comparison-tests/nodeModulesMeaningfulErrorWhenImportingTs/node_modules/a/index.ts. By default, ts-loader will not compile .ts files in node_modules.
You should not need to recompile .ts files there, but if you really want to, use the allowTsInNodeModules option.
See: https://github.com/Microsoft/TypeScript/issues/12358
    at makeSourceMapAndFinish (ts-loader)
    at successLoader (ts-loader)
    at Object.loader (ts-loader)
 @ ./test/comparison-tests/nodeModulesMeaningfulErrorWhenImportingTs/app.ts 3:8-20"
`;

exports[`transpile only: bundle 1`] = `
"/******/ (function(modules) { // webpackBootstrap
/******/ 	// The module cache
/******/ 	var installedModules = {};
/******/
/******/ 	// The require function
/******/ 	function __webpack_require__(moduleId) {
/******/
/******/ 		// Check if module is in cache
/******/ 		if(installedModules[moduleId]) {
/******/ 			return installedModules[moduleId].exports;
/******/ 		}
/******/ 		// Create a new module (and put it into the cache)
/******/ 		var module = installedModules[moduleId] = {
/******/ 			i: moduleId,
/******/ 			l: false,
/******/ 			exports: {}
/******/ 		};
/******/
/******/ 		// Execute the module function
/******/ 		modules[moduleId].call(module.exports, module, module.exports, __webpack_require__);
/******/
/******/ 		// Flag the module as loaded
/******/ 		module.l = true;
/******/
/******/ 		// Return the exports of the module
/******/ 		return module.exports;
/******/ 	}
/******/
/******/
/******/ 	// expose the modules object (__webpack_modules__)
/******/ 	__webpack_require__.m = modules;
/******/
/******/ 	// expose the module cache
/******/ 	__webpack_require__.c = installedModules;
/******/
/******/ 	// define getter function for harmony exports
/******/ 	__webpack_require__.d = function(exports, name, getter) {
/******/ 		if(!__webpack_require__.o(exports, name)) {
/******/ 			Object.defineProperty(exports, name, { enumerable: true, get: getter });
/******/ 		}
/******/ 	};
/******/
/******/ 	// define __esModule on exports
/******/ 	__webpack_require__.r = function(exports) {
/******/ 		if(typeof Symbol !== 'undefined' && Symbol.toStringTag) {
/******/ 			Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });
/******/ 		}
/******/ 		Object.defineProperty(exports, '__esModule', { value: true });
/******/ 	};
/******/
/******/ 	// create a fake namespace object
/******/ 	// mode & 1: value is a module id, require it
/******/ 	// mode & 2: merge all properties of value into the ns
/******/ 	// mode & 4: return value when already ns object
/******/ 	// mode & 8|1: behave like require
/******/ 	__webpack_require__.t = function(value, mode) {
/******/ 		if(mode & 1) value = __webpack_require__(value);
/******/ 		if(mode & 8) return value;
/******/ 		if((mode & 4) && typeof value === 'object' && value && value.__esModule) return value;
/******/ 		var ns = Object.create(null);
/******/ 		__webpack_require__.r(ns);
/******/ 		Object.defineProperty(ns, 'default', { enumerable: true, value: value });
/******/ 		if(mode & 2 && typeof value != 'string') for(var key in value) __webpack_require__.d(ns, key, function(key) { return value[key]; }.bind(null, key));
/******/ 		return ns;
/******/ 	};
/******/
/******/ 	// getDefaultExport function for compatibility with non-harmony modules
/******/ 	__webpack_require__.n = function(module) {
/******/ 		var getter = module && module.__esModule ?
/******/ 			function getDefault() { return module['default']; } :
/******/ 			function getModuleExports() { return module; };
/******/ 		__webpack_require__.d(getter, 'a', getter);
/******/ 		return getter;
/******/ 	};
/******/
/******/ 	// Object.prototype.hasOwnProperty.call
/******/ 	__webpack_require__.o = function(object, property) { return Object.prototype.hasOwnProperty.call(object, property); };
/******/
/******/ 	// __webpack_public_path__
/******/ 	__webpack_require__.p = \\"\\";
/******/
/******/
/******/ 	// Load entry module and return exports
/******/ 	return __webpack_require__(__webpack_require__.s = \\"./test/comparison-tests/nodeModulesMeaningfulErrorWhenImportingTs/app.ts\\");
/******/ })
/************************************************************************/
/******/ ({

/***/ \\"./test/comparison-tests/nodeModulesMeaningfulErrorWhenImportingTs/app.ts\\":
/*!********************************************************************************!*\\\\
  !*** ./test/comparison-tests/nodeModulesMeaningfulErrorWhenImportingTs/app.ts ***!
  \\\\********************************************************************************/
/*! no static exports found */
/***/ (function(module, exports, __webpack_require__) {

\\"use strict\\";
eval(\\"\\\\nObject.defineProperty(exports, \\\\\\"__esModule\\\\\\", { value: true });\\\\nvar a = __webpack_require__(/*! a */ \\\\\\"./test/comparison-tests/nodeModulesMeaningfulErrorWhenImportingTs/node_modules/a/index.ts\\\\\\");\\\\nconsole.log(a);\\\\n\\\\n\\\\n//# sourceURL=webpack:///./test/comparison-tests/nodeModulesMeaningfulErrorWhenImportingTs/app.ts?\\");

/***/ }),

/***/ \\"./test/comparison-tests/nodeModulesMeaningfulErrorWhenImportingTs/node_modules/a/index.ts\\":
/*!*************************************************************************************************!*\\\\
  !*** ./test/comparison-tests/nodeModulesMeaningfulErrorWhenImportingTs/node_modules/a/index.ts ***!
  \\\\*************************************************************************************************/
/*! no static exports found */
/***/ (function(module, exports, __webpack_require__) {

\\"use strict\\";
eval(\\"\\\\nvar elephant = \\\\\\"In the room\\\\\\";\\\\nmodule.exports = elephant;\\\\n\\\\n\\\\n//# sourceURL=webpack:///./test/comparison-tests/nodeModulesMeaningfulErrorWhenImportingTs/node_modules/a/index.ts?\\");

/***/ })

/******/ });"
`;

exports[`transpile only: stats 1`] = `
"    Asset   Size  Chunks             Chunk Names
bundle.js <size>    main  [emitted]  main
Entrypoint main = bundle.js
[./test/comparison-tests/nodeModulesMeaningfulErrorWhenImportingTs/app.ts] <size> {main} [built]
[./test/comparison-tests/nodeModulesMeaningfulErrorWhenImportingTs/node_modules/a/index.ts] <size> {main} [built]"
`;
